--- a/package.json
+++ b/package.json
@@ -8,22 +8,28 @@
   "main": "server.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --exec 'node --loader ts-node/esm' ./src/server.ts",
-    "start": "node ./dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev_2": "npx tsx ./src/server.ts",
+    "dev": "nodemon --ext ts --exec tsx ./src/server.ts",
+    "start": "node ./dist/server.js"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.13.14",
-    "nodemon": "^3.1.9",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.5",
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "tsx": "^4.19.3",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.5.0"
   },
   "prisma": {
